Incorporated Sherri's feedback

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="scroll active"><a href="#home">Home</a></li>
-            <li class="scroll"><a href="#services">Services</a></li>
+            <li class="scroll"><a href="#services">Features</a></li>
             <li class="scroll"><a href="#twitter">More Info</a></li>
           </ul>
         </div>
@@ -164,9 +164,9 @@
       <div class="heading wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
         <div class="row">
           <div class="text-center col-sm-10 col-sm-offset-1">
-            <h2>Our Services</h2>
- 		<strong>ZipCache&trade; offers a world of choices to shake up the slow world of object storage</strong>
-              <h2>A very zippy in-line cache with state of the art policy and tier management.
+            <h2>FEATURES</h2>
+ 		<strong>ZipCache offers a world of choices to shake up the slow world of object storage</strong>
+              <h2>A very zippy in-line cache with state of the art policy and tier management.<br>
                       <strong>Affordable! Just a few pennies an hour!</strong></h2>
        </div>
         </div>
@@ -179,7 +179,7 @@
             </div>
             <div class="service-info">
               <h3>ZipCache for Docker</h3>
-              <p>Zipcache is a fire-and-forget docker service - available on populer container registries.</p>
+              <p>ZipCache is a fire-and-forget docker service - available on popular container registries.</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="450ms">
@@ -217,8 +217,8 @@
               <i class="fa fa-slack"></i>
             </div>
             <div class="service-info">
-              <h3>Community on slack</h3>
-              <p>Follow the slack channel for updates and news</p>
+              <h3>Community on Slack</h3>
+              <p>Follow the Slack channel for updates and news</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="850ms">
@@ -227,7 +227,7 @@
             </div>
             <div class="service-info">
               <h3>Free Trial</h3>
-              <p>Try it out from docker hub</p>
+              <p>Try it out from Docker Hub</p>
             </div>
           </div>
         </div>
@@ -242,7 +242,7 @@
        <div class="heading " >
         <div class="row">
           <div class="text-center col-sm-8 col-sm-offset-2">
-            <h2>More Information from Barnstomers</h2>
+            <h2>More Information from Barnstormers</h2>
  			<p></p><br>
 			<i class="fa fa-desktop fa-2x"></i><br><h3>Links, microsites and other collateral</h3>
        		</div>
@@ -307,7 +307,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p>&copy; 2018 ZipCache by Barnstomers</p>
+            <p>&copy; 2018 ZipCache by Barnstormers</p>
           </div>
           <div class="col-sm-6">
             <p class="pull-right"><a href="http://www.zipcache.com/">Barnstormers, LLC</a></p>
