touch info site

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
         <div class="item" style="background-image: url(images/slider/backlit-bird-clouds-755385.jpg)" center center>
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Soar <span>with Kubernetes,</span> lifted by <span>faster</span> data</h1>
-            <p class="animated fadeInRightBig">Supports X86 CPU instances &nbsp; | &nbsp; ARM version coming soon</p>
+            <h1 class="animated fadeInLeftBig">Lift <span>Kubernetes</span> higher</h1>
+            <p class="animated fadeInRightBig">Speed up stat and data access for Kubernetes containers &nbsp; | &nbsp; Enable multi-site Kubernetes</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">See apps and services</a>
           </div>
         </div>
