--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
             <div class="service-info">
               <h3>ZipCache for Docker</h3>
-              <p>ZipCache is a fire-and-forget docker service - available on popular container registries.</p>
+              <p>ZipCache is a native docker service  available on popular container registries.</p>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="450ms">
@@ -188,7 +188,7 @@
             </div>
             <div class="service-info">
               <h3>ZipCache for AWS and VMware</h3>
-              <p>In marketplace. Coming soon.</p>
+              <p>In marketplace. Coming soon.</p><br>
             </div>
           </div>
           <div class="col-sm-4 wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="650ms">
@@ -256,31 +256,16 @@
               <div class="carousel-inner">
 
                 <div class="item active  fadeIn" >
-					<p>Introducing StorageCloud&trade; - <a href ="https://goo.gl/Xaz8vU"><span>(presentation)</span></a></p>
-				</div>
+					        <p>Introducing ZipCache&trade; - <a href =""><span>(presentation)</span></a></p>
+				        </div>
+
                 <div class="item">
-                  <p>MemCloud&trade; - <a href="https://goo.gl/WpRIYI"><span>(presentation)</span></a></p>
+                  <p><a href="http://www.zipcache.com/docs/Zipcache data sheet - 2018.2.pdf" target="_blank">ZipCache datasheet and pricing details -<span>(opens in new tab)</span></a></p>
                 </div>
-                <div class="item">
-                  <p>Cloudworks&trade; - <a href="http://cloudworks.kodiakdata.com"><span>http://cloudworks.kodiakdata.com</span></a></p>
-                </div>
-                <div class="item">
-                  <p>Solution Brief - <a href="../docs/memcloud-hadoop_1.pdf"><span>Hadoop in MemCloud&trade;</span></a></p>
-               	</div>
-                <div class="item">
-                  <p>Benchmark details - <a href="http://www.memcloud.works/benchmark-results.html" target="_blank"><span>(opens in new tab)</span></a></p>
-                </div>
- 				<div class="item">
-                  <p>Comparisons - <a href="../docs/memcloudcomp.png"><span>AWS vs. Roll-Your-Own vs. MemCloud&trade;</span></a></p>
-               	</div>
             </div>
 				<ol class="carousel-indicators">
 				    <li data-target="#twitter-carousel" data-slide-to="0" class="active"></li>
 				    <li data-target="#twitter-carousel" data-slide-to="1"></li>
-				    <li data-target="#twitter-carousel" data-slide-to="2"></li>
-				    <li data-target="#twitter-carousel" data-slide-to="3"></li>
-				    <li data-target="#twitter-carousel" data-slide-to="4"></li>
-				    <li data-target="#twitter-carousel" data-slide-to="5"></li>
 
   				</ol>
           </div>
