--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="item active wow fadeIn" data-wow-duration="2000ms" data-wow-delay="300ms"
         	style="background-image: url(images/slider/arrows-aero1.jpg)">
           <div class="caption">
-            <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span> from Barnstormers</h1>
+            <h1 class="animated fadeInLeftBig">Introducing <span>ZipCache&trade;</span></h1>
             <p class="animated fadeInRightBig"> In-line transparent cache for S3 &nbsp; | &nbsp; Imporove  S3 IOPs/Bandwidth/Latency 10X to 100X faster</p>
             <a data-scroll class="btn btn-start animated fadeInUpBig" href="#services">Start now</a>
           </div>
@@ -281,8 +281,8 @@
 
         <div class="social-icons">
           <ul>
-            <li><a class="envelope btn " href="mailto:info@kodiakdata.com?Subject=Cloudworks site: "><i class="fa fa-lg  fa-envelope"></i></a></li>
-            <li><a class="twitter" href="https://twitter.com/kodiakdata"><i class="fa fa-lg  fa-twitter"></i></a></li>
+            <li><a class="envelope btn " href="mailto:info@zipcache.com?Subject=Cloudworks site: "><i class="fa fa-lg  fa-envelope"></i></a></li>
+            <li><a class="twitter" href="https://twitter.com/ZipCache"><i class="fa fa-lg  fa-twitter"></i></a></li>
             <li><a class="linkedin" href="https://www.linkedin.com/company-beta/17917853"><i class="fa fa-lg  fa-linkedin"></i></a></li>
           </ul>
         </div>
@@ -292,7 +292,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p>&copy; 2018 ZipCache by Barnstormers</p>
+            <p>&copy; 2018 ZipCach</p>
           </div>
           <div class="col-sm-6">
             <p class="pull-right"><a href="http://www.zipcache.com/">Barnstormers, LLC</a></p>
