--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p>&copy; 2018 ZipCach</p>
+            <p>&copy; 2018 Barnstomers</p>
           </div>
           <div class="col-sm-6">
             <p class="pull-right"><a href="http://www.zipcache.com/">Barnstormers, LLC</a></p>
