--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				        </div>
 
                 <div class="item">
-                  <p><a href="http://www.zipcache.com/docs/Zipcache data sheet - 2018.2.pdf" target="_blank">ZipCache datasheet and pricing details -<span>(opens in new tab)</span></a></p>
+                  <p><a href="http://www.zipcache.com/docs/ZipcacheDataSheet-2018.4.pdf" target="_blank">ZipCache datasheet and pricing details -<span>(opens in new tab)</span></a></p>
                 </div>
             </div>
 				<ol class="carousel-indicators">
